--- a/style.css
+++ b/style.css
@@ -15,8 +15,13 @@
 }
 .bttm{
     background: rgb(238, 238, 238);
-    align-self: flex-end;
-    padding: 0.5em 2em;
+    position: absolute;
+    top:100vh;
+    transform:translateY(-100%);
+    width:100%;
+}
+.bttn{
+    display: flex;
 }
 .liSide{
     margin-right:auto;
@@ -28,7 +33,7 @@
 body{
     font-family: Helvetica, sans-serif;
     color: rgb(121, 121, 121);
-    font-size: 0.8em;
+    font-size: 0.9em;
 }
 ul {
     list-style-type: none;
@@ -44,4 +49,16 @@ a:link, a:visited, a:active {
 }
 a:hover{
     text-decoration:underline;
+}
+button{
+    background: rgb(245, 245, 245);
+    text-decoration: none;
+    border-radius: 6px;
+    border: none;
+    font-size: 1em;
+    padding: 0.5em 1.5em;
+    height: auto;
+    margin: 1em auto 1em auto;
+    display: flex;
+    align-items: center;
 }
